# coursework2.1

./: .gitignore  README.md  config.py  pyproject.toml
data/: vacancies.json
src/: fileworker.py  hh.py  main.py  vacancy.py
tests/: test_fileworker.py  test_hh.py  test_vacancy.py
