[project]
name = "coursework2.1"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy",email = "dm.tsiganov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "coursework2.1"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pandas = "^2.2.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
